DOC-2267: update api reference, copy edits and cleanup.

--- a/modules/ROOT/pages/importword.adoc
+++ b/modules/ROOT/pages/importword.adoc
@@ -55,6 +55,6 @@ The {pluginname} plugin provides the following {productname} commands.
 
 include::partial$commands/{plugincode}-cmds.adoc[]
 
-== APIs
+== API Reference
 
-include::partial$plugin-apis/{plugincode}-apis.adoc[]
+> Explore the comprehensive API documentation for the {pluginname} Premium plugin at https://importdocx.converter.tiny.cloud/docs#section/Import-from-Word[Import from Word.^]
