--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -506,10 +506,10 @@ NOTE: The new `trigger` option can handle multiple character strings as the trig
 
 For more information, visit the updated xref:autocompleter.adoc[Autocompleter] documentation.
 
-=== The open-source `Template` plugin has been removed.
+=== The open-source `template` plugin has been removed.
 // #TINY-10654
 
-The open-source `Template` plugin and associated config options have been removed in {productname} 7.0.
+The open-source `template` plugin and associated config options have been removed in {productname} 7.0.
 
 Customers using the `template` plugin will need to migrate to the premium `advtemplate` which was renamed to `Templates` in {productname} 7.0, which contains all the functionality except some esoteric options.
 
