--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -511,7 +511,7 @@ For more information, visit the updated xref:autocompleter.adoc[Autocompleter] d
 
 The open-source `template` plugin and associated config options have been removed in {productname} 7.0.
 
-Customers using the `template` plugin will need to migrate to the premium `advtemplate` which was renamed to `Templates` in {productname} 7.0, which contains all the functionality except some esoteric options.
+Customers using the `template` plugin will need to migrate to the premium xref:advtemplate.adoc['advtemplate'] plugin in {productname} 7.0, which contains all the functionality except some esoteric options.
 
 For more information, see xref:migration-from-6x.adoc#deprecated-plugins-template-plugin[Migrating from {productname} 6 to {productname} 7].
 
