--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -11,7 +11,7 @@ include::partial$misc/admon-premium-plugin.adoc[]
 
 include::partial$misc/admon-requires-7.0v.adoc[]
 
-The {pluginname} plugin provides users an ability to see how a document has changed over time and a simply to way to restore a saved version.
+The {pluginname} plugin offers users the ability to view document changes over time and restore previous versions effortlessly.
 
 == Interactive example
 
