--- a/modules/ROOT/partials/configuration/revisionhistory_diff_classes.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_diff_classes.adoc
@@ -4,7 +4,7 @@
 This option configures the CSS classes being applied to the change annotations. This option can be used in combination with the `revisionhistory_css_url` to provide custom styles to the change annotations.
 
 [NOTE]
-The CSS class names must exist in the xref:revisionhistory_css_url.adoc[`+revisionhistory_css_url+`]
+The CSS class names must exist in the xref:revisionhistory_css_url[`+revisionhistory_css_url+`]
 
 *Type:* `+Object+`
 
