DOC-2284: Update revision history brief on premium plugins page

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -133,7 +133,7 @@ a|
 [.lead]
 xref:revisionhistory.adoc[Revision History]
 
-Visually track document changes over time.
+Visually view changes and effortlessly restore versions of a document.
 
 a|
 [.lead]
