Update New Premium Plugins wording to be consistent

--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -39,25 +39,25 @@ The following new Premium plugins was released alongside {productname} 7.0.
 
 The new Premium plugin, **Revision History**, allows you to track changes made to content in the {productname} editor and restore previous versions of the content.
 
-For information on the **Revision History** plugin, see xref:revisionhistory.adoc[Revision History].
+For information on the **Revision History Premium Plugin**, see xref:revisionhistory.adoc[Revision History].
 
 === Import from Word
 
-The new Premium plugin, **Import from Word** provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
+The new Premium plugin, **Import from Word**, provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
 
-For information on the **Import from Word Premium Plugin** see xref:importword.adoc[Import from Word docs].
+For information on the **Import from Word Premium Plugin**, see xref:importword.adoc[Import from Word docs].
 
 === Export to Word
 
-The new Premium plugin, **Export to Word** feature lets you generate a `.docx` file directly from the editor.
+The new Premium plugin, **Export to Word**, provides a way to generate a `.docx` file directly from the editor.
 
-For information on the **Export to Word Premium Plugin** see xref:exportword.adoc[Export to Word docs].
+For information on the **Export to Word Premium Plugin**, see xref:exportword.adoc[Export to Word docs].
 
 === Export to PDF
 
-The new Premium plugin, **Export to PDF** feature lets you generate a `.pdf` file directly from the editor.
+The new Premium plugin, **Export to PDF**, provides a way to generate a `.pdf` file directly from the editor.
 
-For information on the **Export to PDF Premium Plugin** see xref:exportpdf.adoc[Export to PDF docs].
+For information on the **Export to PDF Premium Plugin**, see xref:exportpdf.adoc[Export to PDF docs].
 
 === Markdown
 
@@ -65,7 +65,7 @@ The new Premium plugin, **Markdown**, detects pure markdown from a paste event w
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
-For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
+For information on the **Markdown Premium Plugin**, see xref:markdown.adoc[Markdown].
 
 
 [[accompanying-premium-plugin-changes]]
