--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -21,9 +21,9 @@ include::partial$misc/admon-iframe-only.adoc[]
 
 === How it works
 
-The {pluginname} view is opened when clicking on the `revisionhistory` toolbar or menu button which locates under `View` menu.
+The {pluginname} view is opened when clicking on the `revisionhistory` toolbar button or menu button which locates under `View` menu.
 
-The view has the followings:
+The view has the following:
 
 * In the toolbar header, there are `Restore this version` and `Close` buttons.
 ** Clicking `Restore this version` will set the editor's content to the selected version and close the view.
@@ -35,7 +35,7 @@ The view has the followings:
 * The revisions sidebar renders the available versions for a document. When a new version is selected, the diff view is updated accordingly.
 
 [NOTE]
-The default highlighting colors can be customized using xref:revisionhistory_css_url[`+revisionhistory_css_url+`] option
+The default highlighting colors can be customized using the xref:revisionhistory_css_url[`+revisionhistory_css_url+`] option.
 
 [NOTE]
 The {pluginname} plugin interprets commented HTML as valid content, yet it disregards this content during the version comparison process. Consequently, a version containing solely commented content appears as empty in the user interface displaying the differential content.
