correction to the understanding versions table

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -85,7 +85,7 @@ The below table summaries how the initial and current versions are handled in th
 |Yes |No |No |Only the current version is shown
 |Yes |Yes |No |Both the initial and current versions are shown
 |Yes |Yes |Yes |The saved versions and the current version are shown
-|Yes |No |Yes |Only the saved versions are shown
+|Yes |No |Yes |The saved versions and the current version are shown
 |No |Yes |Yes |The saved versions and the current version are shown
 |No |No |Yes |Only the saved versions are shown
 |===
