DOC-2329 removed the paid addon admonitions for `Import from Word`, `Export to Word`, and `Export to PDF`. (#3160)
* DOC-2329 removed the paid addon admonitions for `Import from Word`, `Export to Word`, and `Export to PDF`.

* fix links in "Improved Custom Elements" release note entry

* Update New Premium Plugins wording to be consistent

* remove markdown plugin admonition from release notes

* update wording in `New Premium plugins` section

--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -43,35 +43,27 @@ For information on the **Revision History** plugin, see xref:revisionhistory.ado
 
 === Import from Word
 
-The new Premium plugin, **Import from Word** provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
+The new Premium plugin, **Import from Word**, provides a way to import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
 
-include::partial$misc/admon-paid-addon-pricing.adoc[]
-
-For information on the **Import from Word Premium Plugin** see xref:importword.adoc[Import from Word docs].
+For information on the **Import from Word** plugin, see xref:importword.adoc[Import from Word].
 
 === Export to Word
 
-The new Premium plugin, **Export to Word** feature lets you generate a `.docx` file directly from the editor.
+The new Premium plugin, **Export to Word**, provides a way to generate a `.docx` file directly from the editor.
 
-include::partial$misc/admon-paid-addon-pricing.adoc[]
-
-For information on the **Export to Word Premium Plugin** see xref:exportword.adoc[Export to Word docs].
+For information on the **Export to Word** plugin, see xref:exportword.adoc[Export to Word].
 
 === Export to PDF
 
-The new Premium plugin, **Export to PDF** feature lets you generate a `.pdf` file directly from the editor.
+The new Premium plugin, **Export to PDF**, provides a way to generate a `.pdf` file directly from the editor.
 
-include::partial$misc/admon-paid-addon-pricing.adoc[]
-
-For information on the **Export to PDF Premium Plugin** see xref:exportpdf.adoc[Export to PDF docs].
+For information on the **Export to PDF** plugin, see xref:exportpdf.adoc[Export to PDF].
 
 === Markdown
 
 The new Premium plugin, **Markdown**, detects pure markdown from a paste event within a {productname} editor instance and converts it to HTML.
 
-include::partial$misc/admon-premium-plugin.adoc[]
-
-For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
+For information on the **Markdown** plugin, see xref:markdown.adoc[Markdown].
 
 
 [[accompanying-premium-plugin-changes]]
@@ -387,7 +379,7 @@ Any editors using this `highlight_on_focus: true` option, can remove this option
 === Improved Custom Elements
 // #TINY-9980 / TINY-9979
 
-{productname} 7.0 introduces enhancements to the existing xref:content-filtering.adoc#custom_elements.adoc[custom_elements] option and xref:apis/tinymce.html.schema.adoc#addCustomElements[addCustomElements] API. This update allows the structure of custom elements to be refined, offering users more flexibility and customization options.
+{productname} 7.0 introduces enhancements to the existing xref:content-filtering.adoc#custom_elements[custom_elements] option and xref:apis/tinymce.html.schema.adoc#addCustomElements[addCustomElements] API. This update allows the structure of custom elements to be refined, offering users more flexibility and customization options.
 
 Key Improvements:
 
@@ -395,7 +387,7 @@ Key Improvements:
 * **Attributes and Inheritance:** Elements can inherit attributes and children from other specified elements using the extends property in the Custom Element Spec.
 * **Attribute and Children Specifications:** The Custom Element Spec includes properties such as attributes and children, enabling precise customization of element behavior.
 
-For more information and details for `addCustomElements` see xref:content-filtering.adoc#custom-elements[custom_elements].
+For more information and details for `addCustomElements` see xref:content-filtering.adoc#custom_elements[custom_elements].
 
 === Optional Tooltip for Dialog Footer Toggle Buttons
 //#TINY-10672
