--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -17,7 +17,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 The release brings new features essential for content producers and managers in the modern workplace. These features improve efficiency through simplified sharing of content and providing improved tools for the asynchronous collaboration needs of remote teams.
 
 * **Revision History**: View changes from one content version to another
-* **Document Converters**: Import content from MS Word. Export content to MS Word or PDF documents
+* **Document Converters**: Import content from Microsoft Word. Export content to Microsoft Word or PDF documents.
 * **Markdown**: Paste markdown from other platforms into the editor for instant rich-text conversion.
 
 These release notes provide an overview of the changes for {productname} 7.0, including:
