--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -20,7 +20,7 @@ The release brings new features essential for content producers and managers in 
 * **Document Converters**: Import content from Microsoft Word. Export content to Microsoft Word or PDF documents.
 * **Markdown**: Paste markdown from other platforms into the editor for instant rich-text conversion.
 
-These release notes provide an overview of the changes for {productname} 7.0, including:
+These release notes provide an overview of the changes for {productname} 7.0, including the following:
 
 * xref:new-premium-plugin<s>[New Premium plugins]
 * xref:new-open-source-plugin<s>[New Open Source plugin]
