--- a/modules/ROOT/pages/full-featured-premium-demo.adoc
+++ b/modules/ROOT/pages/full-featured-premium-demo.adoc
@@ -27,6 +27,16 @@ The following plugins are excluded from this example:
 |xref:code.adoc[Code]
 |xref:advcode.adoc[*Enhanced Code Editor*] included instead.
 
+|xref:exportpdf.adoc[Export to PDF]
+|Logistical concerns regarding exposing internal service URLs preclude adding this.
+
+|xref:exportword.adoc[Export to Word]
+|Logistical concerns regarding exposing internal service URLs preclude adding this.
+
+|xref:importword.adoc[Import from Word]
+|Logistical concerns regarding exposing internal service URLs preclude adding this.
+
 |xref:moxiemanager.adoc[MoxieManager]
 |xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
+
 |===
