DOC-2268: merged two known issues into one note block.

--- a/modules/ROOT/pages/exportword.adoc
+++ b/modules/ROOT/pages/exportword.adoc
@@ -22,10 +22,11 @@ Demos containing the {pluginname} plugin are currently only available on our mai
 ====
 
 [NOTE]
-The generated `.docx` file may not be fully compatible with older versions of Word.
-
-[NOTE]
-xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] will not be included in the exported document.
+.{pluginname} known issues
+====
+* The generated `.docx` file may not be fully compatible with older versions of Word.
+* xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] will not be included in the exported document.
+====
 
 == Basic setup
 
