Updated TinyMCE License Configuration Guide with latest suggestions

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -411,4 +411,5 @@
 **** xref:7.0-release-notes.adoc#known-issues[Known issues]
 ** xref:changelog.adoc[Changelog]
 * xref:invalid-api-key.adoc[Invalid API key]
+* xref:license-key.adoc[License key]
 * xref:support.adoc[Support]
