Updated TinyMCE License Configuration Guide with latest suggestions - missimng fullstop

--- a/modules/ROOT/pages/license-key.adoc
+++ b/modules/ROOT/pages/license-key.adoc
@@ -80,4 +80,4 @@ The license key ensures compliance with {productname} licensing terms. It's part
 
 === How can I get further assistance?
 
-For any licensing or technical support questions, see our available options on the https://www.tiny.cloud/docs/tinymce/latest/support/[support page]
+For any licensing or technical support questions, see our available options on the https://www.tiny.cloud/docs/tinymce/latest/support/[support page].
