Updated TinyMCE License Configuration Guide with latest suggestions - opening GPL page in new tab

--- a/modules/ROOT/pages/license-key.adoc
+++ b/modules/ROOT/pages/license-key.adoc
@@ -46,7 +46,7 @@ tinymce.init({
 
 === What does the GPL license mean?
 
-{productname} 7 is licensed under the GNU General Public License Version 2 or later, often abbreviated to GPLv2+. https://www.gnu.org/licenses/old-licenses/gpl-2.0.html[Read more about the license terms here.]
+{productname} 7 is licensed under the GNU General Public License Version 2 or later, often abbreviated to GPLv2+. https://www.gnu.org/licenses/old-licenses/gpl-2.0.html[Read more about the license terms here.^]
 
 The GPLv2+ license was chosen to provide the best compatibility with existing GPL licensed open source projects.
 
@@ -80,4 +80,4 @@ The license key ensures compliance with {productname} licensing terms. It's part
 
 === How can I get further assistance?
 
-For any licensing or technical support questions, see our available options on the https://www.tiny.cloud/docs/tinymce/latest/support/[support page].
+For any licensing or technical support questions, see our available options on the https://www.tiny.cloud/docs/tinymce/latest/support/[support page.]
