DOC-2284: Update example

--- a/modules/ROOT/partials/configuration/revisionhistory_diff_classes.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_diff_classes.adoc
@@ -32,5 +32,6 @@ tinymce.init({
     removal: 'removed',
     modification: 'modified'
   },
+  revisionhistory_fetch: () => Promise.resolve([])
 });
 ----
