Clean up `nav.adoc`

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -396,9 +396,8 @@
 ** xref:release-notes.adoc[Release notes for TinyMCE 7]
 *** TinyMCE 7.0
 **** xref:7.0-release-notes.adoc#overview[Overview]
-**** xref:7.0-release-notes.adoc#new-premium-plugin<s>[New Premium plugin<s>]
+**** xref:7.0-release-notes.adoc#new-premium-plugins[New Premium plugins]
 **** xref:7.0-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
-**** xref:7.0-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 **** xref:7.0-release-notes.adoc#accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
 **** xref:7.0-release-notes.adoc#accompanying-enhanced-skins-and-icon-packs-changes[Accompanying Enhanced Skins & Icon Packs changes]
 **** xref:7.0-release-notes.adoc#improvements[Improvements]
