DOC-2268: update admon specific for Export to Word, copy edits.

--- a/modules/ROOT/pages/exportword.adoc
+++ b/modules/ROOT/pages/exportword.adoc
@@ -25,7 +25,7 @@ Demos containing the {pluginname} plugin are currently only available on our mai
 .{pluginname} known issues
 ====
 * The generated `.docx` file may not be fully compatible with older versions of Word.
-* xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] will not be included in the exported document.
+* xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] will not be included in the exported document, resulting in a console.error _"The Export to Word plugin requires the `exportword_service_url` to be configured"_.
 ====
 
 == Basic setup
