--- a/modules/ROOT/pages/exportword.adoc
+++ b/modules/ROOT/pages/exportword.adoc
@@ -48,7 +48,7 @@ tinymce.init({
 
 The following configuration options affect the behavior of the {pluginname} plugin.
 
-include::partial$configuration/{plugincode}.adoc[][leveloffset=+1]
+include::partial$configuration/{plugincode}.adoc[leveloffset=+1]
 
 == Commands
 
