DOC-2268: Add new documentation for `ExportWord` Plugin. (#3072)
* DOC-2268: Add new plugin documentation for ExportWord Premium Plugin for TinyMCE 7.0.

* DOC-2268: add toolbar and menu-items, updated icon.svg file and various file corrections.

* DOC-2268: add svg for export-word to support editor-icon-identifiers.adoc

* DOC-2268: add paid addon message, events, api documenation link, and both exportword_converter_options and exportword_converter_style.

* Update modules/ROOT/partials/plugin-apis/exportword-apis.adoc

* Update modules/ROOT/pages/exportword.adoc

* DOC-2268: various copy edits, fixes and removal of demo files.

* Update modules/ROOT/pages/exportword.adoc

* Update modules/ROOT/partials/configuration/exportword.adoc

* Update modules/ROOT/partials/configuration/exportword.adoc

* Update modules/ROOT/partials/configuration/exportword.adoc

* add menu item to `defaultmenuitems.adoc`

* Update modules/ROOT/partials/commands/exportword-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/partials/commands/exportword-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/pages/available-menu-items.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/module-loading/bundling-plugin-files.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/module-loading/bundling-plugin-files.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/misc/premium-plugin-list.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/available-toolbar-buttons.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@user

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -101,6 +101,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Export to Word
+:plugincode: exportword
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Footnotes
 :plugincode: footnotes
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
