--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -6,6 +6,7 @@
 * xref:introduction-to-tiny-comments.adoc[Comments]
 * xref:advcode.adoc[Enhanced Code Editor]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
+* xref:exportword.adoc[Export to Word]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
 * xref:inline-css.adoc[Inline CSS]
