--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -304,6 +304,7 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:advtable.adoc[Enhanced Tables]
+*** xref:exportword.adoc[Export to Word]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
 *** xref:editimage.adoc[Image Editing]
