--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -59,6 +59,12 @@ Add enhanced functionality to tables.
 
 a|
 [.lead]
+xref:exportword.adoc[Export to Word]
+
+Exports editor content into `.docx` file format and saves to local disk.
+
+a|
+[.lead]
 xref:footnotes.adoc[Footnotes]
 
 Insert intext footnotes and add footnote entries.
