DOC-2266: Add new documentation for `ExportPDF` plugin. (#3078)
* DOC-2266: Add new documenation for ExportPDF plugin.

* Update modules/ROOT/partials/configuration/icon_list.adoc

* DOC-2266: add svg for export-pdf to support editor-icon-identifiers.adoc

* DOC-2266: add paid addon admon, export converter options to plugin documentation.

* Update modules/ROOT/partials/plugin-apis/exportpdf-apis.adoc

* Update modules/ROOT/partials/commands/exportpdf-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/partials/commands/exportpdf-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/partials/configuration/exportpdf.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/pages/exportpdf.adoc

* Update modules/ROOT/pages/exportpdf.adoc

* Update modules/ROOT/pages/exportpdf.adoc

* Update modules/ROOT/examples/live-demos/exportpdf/index.html

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>

* Update modules/ROOT/examples/live-demos/exportpdf/index.html

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>

* Update modules/ROOT/pages/exportpdf.adoc

* Update modules/ROOT/examples/live-demos/exportpdf/index.html

* Update modules/ROOT/partials/menu-item-ids/exportpdf-menu-items.adoc

* Update modules/ROOT/partials/misc/premium-plugin-list.adoc

* Update modules/ROOT/pages/exportpdf.adoc

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* DOC-2266: copy edits, removal of demo.

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* Update modules/ROOT/partials/configuration/exportpdf.adoc

* add menu item to `available-menu-items.adoc`



--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -304,6 +304,7 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:advtable.adoc[Enhanced Tables]
+*** xref:exportpdf.adoc[Export to PDF]
 *** xref:exportword.adoc[Export to Word]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
