--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -101,6 +101,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Export to PDF
+:plugincode: exportpdf
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Export to Word
 :plugincode: exportword
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
