--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -113,6 +113,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Export to PDF
+:plugincode: exportpdf
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Export to Word
 :plugincode: exportword
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
