--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -224,6 +224,7 @@ Commands are available for the following plugins:
 * xref:directionality[Directionality]
 * xref:enhancedcodeeditor[Enhanced Code Editor]
 * xref:emoticons[Emoticons]
+* xref:exportpdf[Export to PDF]
 * xref:exportword[Export to Word]
 * xref:footnotes[Footnotes]
 * xref:formatpainter[Format Painter]
@@ -335,6 +336,13 @@ include::partial$commands/code-cmds.adoc[leveloffset=+3]
 The following commands require the xref:emoticons.adoc[Emoticons (`+emoticons+`)] plugin.
 
 include::partial$commands/emoticons-cmds.adoc[leveloffset=+3]
+
+[[export-pdf]]
+==== Export to PDF
+
+The following commands require the xref:exportpdf.adoc[Export to PDF (`+exportpdf+`)] plugin.
+
+include::partial$commands/exportpdf-cmds.adoc[leveloffset=+3]
 
 [[export-word]]
 ==== Export to Word
