--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -65,6 +65,12 @@ Exports editor content into `.docx` file format and saves to local disk.
 
 a|
 [.lead]
+xref:exportpdf.adoc[Export to PDF]
+
+Export and generate content from {productname} into `document.pdf` format.
+
+a|
+[.lead]
 xref:footnotes.adoc[Footnotes]
 
 Insert intext footnotes and add footnote entries.
